--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -100,7 +100,7 @@
     /* Base styling for all modules */
     border: none;
     border-radius: 0;
-    font-family: "Iosevka Nerd Font";
+    font-family: "FiraCode Nerd Font";
     font-size: 14px;
     min-height: 0;
 }
@@ -116,7 +116,7 @@ window#waybar {
 #mode, #mpd, #custom-weather, #custom-playerctl, #clock, #cpu,
 #memory, #temperature, #battery, #network, #pulseaudio,
 #backlight, #disk, #custom-uptime, #custom-updates, #custom-quote,
-#idle_inhibitor, #tray {
+#idle_inhibitor, #tray, #wireplumber {
     padding: 0 10px;
     margin: 0 2px;
     border-bottom: 2px solid transparent;
@@ -239,12 +239,12 @@ window#waybar {
     border-bottom-color: @network-disconnected-color;
 }
 
-#pulseaudio {
+#pulseaudio, #wireplumber {
     color: @pulseaudio-color;
     border-bottom-color: @pulseaudio-color;
 }
 
-#pulseaudio.muted {
+#pulseaudio.muted, #wireplumber.muted {
     color: @pulseaudio-muted-color;
     border-bottom-color: @pulseaudio-muted-color;
 }
